--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
 				<div id="port_container">
 					<figure class="figures">
 						<img class="figures_img" src="assets/quote.jpg">
+						<a href="http://codepen.io/alexis-l8/pen/mOPJyE" target="_blank"><div class="overlay">
 						<div class="overlay">
 							<h3 class="overlay_title">Random Quote Machine</h3>
 							<p class="overlay_content">Coming Soon...</p>
