--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
 				<div id="port_container">
 					<figure class="figures">
 						<img class="figures_img" src="assets/quote.jpg">
-						<a href="http://codepen.io/alexis-l8/pen/mOPJyE" target="_blank"><div class="overlay">
+						<a href="http://codepen.io/alexis-l8/full/VmeNqw/" target="_blank"><div class="overlay">
 						<div class="overlay">
 							<h3 class="overlay_title">Random Quote Machine</h3>
 							<p class="overlay_content">Coming Soon...</p>
-						</div>
+						</div></a>
 					</figure>
 					<figure class="figures">
 						<img class="figures_img" src="assets/weather.jpg">
