--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 						<a href="http://codepen.io/alexis-l8/full/VmeNqw/" target="_blank"><div class="overlay">
 						<div class="overlay">
 							<h3 class="overlay_title">Random Quote Machine</h3>
-							<p class="overlay_content">Coming Soon...</p>
+							<p class="overlay_content">This app will give you famous quotes for motivational inspiration!</p>
 						</div></a>
 					</figure>
 					<figure class="figures">
