--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 		<div id="banner">
 			<p><a onclick="smoothScroll('about');return false" href="#about" >Alexis Lui</a></p>
 			<div>
-				<div><a href="http://codepen.io/alexis-l8/" target="_blank"><img src="assets/codepen.png" style="width:60px;height:60px;"></a></div>
-				<div><a href="https://github.com/alexis-l8" target="_blank"><img src="assets/github.png" style="width:60px;height:60px;"></a></div>
-				<div><a href="https://www.freecodecamp.com/alexis-l8" target="_blank"><img src="assets/fcc.png" style="width:80px;height:80px"></a></div>
-				<div><a href="https://uk.linkedin.com/in/alexisluiccaf" target="_blank"><img src="assets/linkedin.png" style="width:60px;height:60px"></a></div>
-				<div><a href="https://www.codewars.com/users/alexis-l8" target="_blank"><img src="assets/codewars.png" style="width:60px;height:60px"></a></div>
+				<a href="http://codepen.io/alexis-l8/" target="_blank"><img src="assets/codepen.png" style="width:60px;height:60px;"></a>
+				<a href="https://github.com/alexis-l8" target="_blank"><img src="assets/github.png" style="width:60px;height:60px;"></a>
+				<a href="https://www.freecodecamp.com/alexis-l8" target="_blank"><img src="assets/fcc.png" style="width:80px;height:80px"></a>
+				<a href="https://uk.linkedin.com/in/alexisluiccaf" target="_blank"><img src="assets/linkedin.png" style="width:60px;height:60px"></a>
+				<a href="https://www.codewars.com/users/alexis-l8" target="_blank"><img src="assets/codewars.png" style="width:60px;height:60px"></a>
 			</div>
 		</div>
 	</div>
