--- a/index.html
+++ b/index.html
@@ -156,10 +156,11 @@
 					</figure>
 					<figure class="figures">
 						<img class="figures_img" src="assets/twitch.jpg">
+						<a href="http://codepen.io/alexis-l8/full/xRXbVz/" target="_blank"><div class="overlay">
 						<div class="overlay">
 							<h3 class="overlay_title">Twitch API</h3>
-							<p class="overlay_content">Coming Soon...</p>
-						</div>
+							<p class="overlay_content">This app enables you to see which streamers are online or offline on Twitch.tv</p>
+						</div></a>
 					</figure>
 				</div>
 			</section>
