--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 						<a href="http://codepen.io/alexis-l8/full/xRXbVz/" target="_blank"><div class="overlay">
 						<div class="overlay">
 							<h3 class="overlay_title">Twitch API</h3>
-							<p class="overlay_content">This app enables you to see which streamers are online or offline on Twitch.tv</p>
+							<p class="overlay_content">This app enables you to see which streamers are online or offline on Twitch.tv.</p>
 						</div></a>
 					</figure>
 				</div>
