--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 					</figure>
 					<figure class="figures">
 						<img class="figures_img" src="assets/wiki.jpg">
-						<a href="http://codepen.io/alexis-l8/full/ObMrwR/" target="_blank"><div class="overlay">
+						<a href="https://codepen.io/alexis-l8/pen/ENomZe" target="_blank"><div class="overlay">
 							<h3 class="overlay_title">Wikipedia Viewer</h3>
 							<p class="overlay_content">This app utilises the Wikipedia API to allow you to search for Wikipedia entries or generate a random one.</p>
 						</div></a>
