--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
 					</figure>
 					<figure class="figures">
 						<img class="figures_img" src="assets/weather.jpg">
-						<a href="https://codepen.io/alexis-l8/full/VmeNqw/" target="_blank"><div class="overlay">
+						<a href="http://codepen.io/alexis-l8/full/VmeNqw/" target="_blank"><div class="overlay">
 							<h3 class="overlay_title">Local Weather</h3>
-							<p class="overlay_content">This app connects with the Open Weather API to give you the weather in your current location using your longitudinal and latitudinal data.</p>
+							<p class="overlay_content">This app connects with the Open Weather API to give you the weather in your current location using your longitudinal and latitudinal data. (Please make sure this is opened over HTTP and not HTTPS)</p>
 						</div></a>
 					</figure>
 					<figure class="figures">
