--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						<figure class="about_figures">
 							<img class="figures_img" src="assets/nature.jpg">
 							<div class="overlay">
-								<h3 class="overlay_title">Nature <3</h3>
+								<h3 class="overlay_title">Nature &lt;3</h3>
 								<p class="overlay_content">I spent 5 years in Devon and learned to appreciate the beauty of nature. Look, that's me kicking sand to prove it.</p>
 							</div>
 						</figure>
@@ -87,7 +87,7 @@
 						<figure class="about_figures">
 							<img class="figures_img" src="assets/burger.jpg">
 							<div class="overlay">
-								<h3 class="overlay_title">Food & Cooking</h3>
+								<h3 class="overlay_title">Food &amp; Cooking</h3>
 								<p class="overlay_content">I love eating good food but I also really enjoy cooking it too! I'm better at one than the other though...</p>
 							</div>
 						</figure>
