--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 				<div id="port_container">
 					<figure class="figures">
 						<img class="figures_img" src="assets/quote.jpg">
-						<a href="http://codepen.io/alexis-l8/full/mOPJyE/" target="_blank"><div class="overlay">
+						<a href="http://codepen.io/alexis-l8/full/mOPJyE/" target="_blank">
 						<div class="overlay">
 							<h3 class="overlay_title">Random Quote Machine</h3>
 							<p class="overlay_content">This app will give you famous quotes for motivational inspiration!</p>
@@ -142,21 +142,23 @@
 					</figure>
 					<figure class="figures">
 						<img class="figures_img" src="assets/weather.jpg">
-						<a href="http://codepen.io/alexis-l8/full/VmeNqw/" target="_blank"><div class="overlay">
+						<a href="http://codepen.io/alexis-l8/full/VmeNqw/" target="_blank">
+						<div class="overlay">
 							<h3 class="overlay_title">Local Weather</h3>
 							<p class="overlay_content">This app connects with the Open Weather API to give you the weather in your current location using your longitudinal and latitudinal data. (Please make sure this is opened over HTTP and not HTTPS)</p>
 						</div></a>
 					</figure>
 					<figure class="figures">
 						<img class="figures_img" src="assets/wiki.jpg">
-						<a href="https://codepen.io/alexis-l8/full/eByWPP/" target="_blank"><div class="overlay">
+						<a href="https://codepen.io/alexis-l8/full/eByWPP/" target="_blank">
+						<div class="overlay">
 							<h3 class="overlay_title">Wikipedia Viewer</h3>
 							<p class="overlay_content">This app utilises the Wikipedia API to allow you to search for Wikipedia entries or generate a random one.</p>
 						</div></a>
 					</figure>
 					<figure class="figures">
 						<img class="figures_img" src="assets/twitch.jpg">
-						<a href="http://codepen.io/alexis-l8/full/xRXbVz/" target="_blank"><div class="overlay">
+						<a href="http://codepen.io/alexis-l8/full/xRXbVz/" target="_blank">
 						<div class="overlay">
 							<h3 class="overlay_title">Twitch API</h3>
 							<p class="overlay_content">This app enables you to see which streamers are online or offline on Twitch.tv.</p>
